// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline /> Basic usage of Timeline 1`] = `
<ul
  className="jc-timeline"
>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item jc-timeline-item-last"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`<Timeline /> Color usage of Timeline 1`] = `
<ul
  className="jc-timeline"
>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-green"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-green"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-red"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      <p>
        Solve initial network problems 1
      </p>
      <p>
        Solve initial network problems 2
      </p>
      <p>
        Solve initial network problems 3 2015-09-01
      </p>
    </div>
  </li>
  <li
    className="jc-timeline-item jc-timeline-item-last"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      <p>
        Technical testing 1
      </p>
      <p>
        Technical testing 2
      </p>
      <p>
        Technical testing 3 2015-09-01
      </p>
    </div>
  </li>
</ul>
`;

exports[`<Timeline /> Custom usage of Timeline 1`] = `
<ul
  className="jc-timeline"
>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-custom jc-timeline-item-head-red"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    >
      <i
        className="jcicon jcicon-clock-circle-o "
        style={
          Object {
            "fontSize": "16px",
          }
        }
      />
    </div>
    <div
      className="jc-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item jc-timeline-item-last"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`<Timeline /> Pending usage of Timeline 1`] = `
<ul
  className="jc-timeline jc-timeline-pending"
>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item jc-timeline-item-last"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    />
    <div
      className="jc-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    className="jc-timeline-item jc-timeline-item-pending"
  >
    <div
      className="jc-timeline-item-tail"
    />
    <div
      className="jc-timeline-item-head jc-timeline-item-head-custom jc-timeline-item-head-blue"
      style={
        Object {
          "borderColor": undefined,
        }
      }
    >
      <i
        className="jcicon jcicon-loading  jcicon-spin"
        style={Object {}}
      />
    </div>
    <div
      className="jc-timeline-item-content"
    >
      Recording...
    </div>
  </li>
</ul>
`;
